lab1/Test/L1-A-9-28.output
Error Type B at Line 12
Error Type B at Line 24
Error Type B at Line 28
Error Type B at Line 30
Error Type B at Line 33
