lab1/Test/L1-A-9-28.cmm
struct RKj6cAJHvIfB60B3phtY eK07yqcl1 ( float FhyVa 
  ) {
}
int Lb16MKX6n , QrTlg080R8OEOyrLnA [ 1603039610 ] 

;
struct o7Kp5PDMRi {
  struct {
  }W4 = CYoJAsqxnG3vRKx || uc5OwjMHPbJ4hTDE7My <= 
    NjzvvvWzgVS4FjYWB5VS / - fYuYDFeL [ D3R1UCAoROKly1C 
    = hazQIDA2zkUgDZ95Hly && kJ < V1HIyS9zV + svcdjYYjkRed 
    ( bcIGUmih , lPi5UGrVwSromA9RRHI = pq9 = = kvxD6El5UfSHpM 
    = tk29d >= - ( ci03Z5SNB && ( naMriNWfZl0r43KDpm && 
    eQsyrmQXM9QmvtwLVs == QEqO > - - beL6qAaOvF9I ) / 
    ihx8w8uBo5oRS ) != 1841452212.307690569 ) ] - - ! 
    i ( ) * 1608988506 . t2le37oLTnTJMsqWQfFj , LcbWmTWb 
    ;
};
int ;
int ;
int ;
int AoCteKKGA8Ymjug0ON ( ) {
  if ( U )   eZXFeu13n91s15qX 
else   return VmwOb6Icta7 ;

}
int ;
int Is1uhKw8AS1tE_WDvoMd ( {
}
int D_kib9cPpny ( int zYVK , int ) {
  if ( yv ) {
    if ( pQTqf2SP2N5xcT_z1o5_ )     Wqn4lH 
else     if ( Br4z8vw3qTY34iB9HD2 )     LqHEds ;


    while ( BImMoCC3SdFdlLIRPA5 )     y0WFnCO6nadv3F6hQl 
      ;

  }
}
int ;
